--- a/Githubfinder/index.html
+++ b/Githubfinder/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/sandstone/bootstrap.min.css">
     <title>GitHub Finder</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
      <div class="container"><a href="#" class="navbar-brand">Github Finder</a></div>
  </nav>
 <div class="container searchContainer">
-    <div class="search card card-body">
+    <div class="search card card-body bg-light">
         <h1>Search Github Users</h1>
         <p class="lead">Enter a username to fetch a user profile and repos.</p>
         <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username....">
@@ -20,7 +20,7 @@
     <br>
     <div id="profile"></div>
 </div>
-<footer class="mt-5 p-3 text-center bg-light">GitHub Finder &copy</footer>
+<footer class="mt-5 p-3 text-center bg-primary text-light">GitHub Finder &copy</footer>
 
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
